added rec playlist to home page

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Simple React App</title>
+  <title>Dotify</title>
+  <link  type="image/jpg" src="../src/images/favicon-32x32.png"/>
 </head>
 
 <body>
