fixed bug on album page

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Dotify</title>
-  <link  type="image/jpg" src="../src/images/favicon-32x32.png"/>
+  <img type="image/jpg" href="../src/images/favicon-32x32.png" />
 </head>
 
 <body>
