--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>Dotify</title>
-  <img type="image/jpg" href="../src/images/favicon-32x32.png" />
+  <!-- <Link type="shortcut icon" src="%PUBLIC_URL%/favicon-32x32.png" /> -->
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+  <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
 </head>
 
 <body>
