added linked in preview images

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <title>Dotify</title>
+  <meta property='og:title' content='Dotify' />
+  <meta property='og:image' content='%PUBLIC_URL%/rsz_dotify-pic.png' />
+  <meta property='og:description' content='A UI alternative for Spotify. NOTE: only works for spotify premium users' />
+  <meta property='og:url' content='https://aadotify.herokuapp.com/' />
   <!-- <Link type="shortcut icon" src="%PUBLIC_URL%/favicon-32x32.png" /> -->
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
