trying to fix linked in preview images

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
 
   <meta property='og:title' content='Dotify' />
   <meta property='og:image' content='%PUBLIC_URL%/rsz_dotify_pic.png' />
-  <meta property='og:description' content='A UI alternative for Spotify. NOTE: only works for spotify premium users' />
+  <meta property='og:description' content='A UI alternitive for spotify.' />
   <meta property='og:url' content='https://aadotify.herokuapp.com/' />
+
   <!-- <Link type="shortcut icon" src="%PUBLIC_URL%/favicon-32x32.png" /> -->
   <title>Dotify</title>
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
