updated linked in note preview

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 
   <meta property='og:title' content='Dotify' />
   <meta property='og:image' content='%PUBLIC_URL%/rsz_dotify_pic.png' />
-  <meta property='og:description' content='A UI alternitive for spotify.' />
+  <meta property='og:description'
+    content='A UI alternitive for spotify. NOTE: A spotify premium account is required for all features of this application to work' />
   <meta property='og:url' content='https://aadotify.herokuapp.com/' />
 
   <!-- <Link type="shortcut icon" src="%PUBLIC_URL%/favicon-32x32.png" /> -->
